--- a/bermuda.html
+++ b/bermuda.html
@@ -15,16 +15,29 @@
 					</li>
 				</ul>
 			</div>
-			<div class= "box header"> 
-				<center>WELCOME</center>
+			<div class= "box a"> 
+				<a href="bermuda.html"> Causes of disappearances in Bermuda Triangle?! </a>
 			</div>
-			<div class= "box b"> kdjgifgufg
+			<div class= "box b"> 
+				<a href="lost.html"> Lost at sea?!</a>
 			</div>
-			<div class= "box c"> frfhiergh
+			<div class= "box c"> 
+				<a href="theories.html"> Conspiracy theories </a>
 			</div>
-			<div class= "box d"> fkdbnfgbgg
+			<div class= "box d">
+				<a href="extra.html">Extra Caylene Traldonado </a>
 			</div>
-			<div class= "box main"> fkdbnfgbgg
+			<div class= "box main">	
+				<center>
+					<h2> Welcome </h2>
+					<a href="https://youtu.be/TqQlsbq649g"><img src="images/bermudatwo.jpg" width= 500px height=300px/></a>
+					<h4> Click here to watch a video about the Bermuda Triangle</h4> 
+					<h3>__________________________________________</h3>
+					<h2> About the Bermuda Triangle! </h2> 
+					<p> People believe that the cause of the Bermuda Triangle disappearances is because of Atlantis is laying down in the the surrounding area, and the technology they have interferes with our technology and cause planes to crash down. After the plane crashes then they people go into the water, atlanteans help them and they live there. </p>
+					<img src="images/atlantis1.png" width= 500px height=300px/> </a>
+					<p> People believe that the cause of the Bermuda Triangle disappearances is because of Atlantis is laying down in the the surrounding area, and the technology they have interferes with our technology and cause planes to crash down. After the plane crashes then they people go into the water, atlanteans help them and they live there.  </p> 
+				</center>
 			</div>
 		</div>
 	</body>
