--- a/extra.html
+++ b/extra.html
@@ -15,29 +15,30 @@
 					</li>
 				</ul>
 			</div>
-			<div class= "box header"> 
-				<center>WELCOME</center>
+			<div class= "box a"> 
+				<a href="bermuda.html"> Causes of disappearances in Bermuda Triangle?! </a>
 			</div>
-			<div class= "box b"> kdjgifgufg
+			<div class= "box b"> 
+				<a href="lost.html"> Lost at sea?!</a>
 			</div>
-			<div class= "box c"> frfhiergh
+			<div class= "box c"> 
+				<a href="theories.html"> Conspiracy theories </a>
 			</div>
-			<div class= "box d"> fkdbnfgbgg
+			<div class= "box d">
+				<a href="extra.html">Extra Caylene Traldonado </a>
 			</div>
-			<div class= "box main">	WELCOME
-				<br>
-				<br>
-				<br>
-				<img src="images/intro.jpg" width= 100% height=50%/></a></div>
-				</br>
-				</br>
-				</br>
+			<div class= "box main">	
+				<center>
+					<h2> Welcome </h2>
+					<a href="https://drive.google.com/file/d/0BxAyexMig-KMOElVanZ5MzM3Q2NnSEs3UVo5LW9hMC0xdlVV/view"><img src="images/interview.jpg" width= 500px height=300px/></a>
+					<h4> Click here to watch the Caylene Traldonado</h4> 
+					<h3>__________________________________________</h3>
+					<h2> Extra Content Of Caylene Traldonado! </h2> 
+					<a href="https://drive.google.com/file/d/1ZC6ZLq1IHQPphWs29-b5MnIbO_zZkFX9/view?usp=sharing"><img src="images/op.jpg" width= 500px height=300px/> </a>
+					<p> This video is the pitching trailer for our op-doc which is based on the infasinations of unsovled mysteries.  
+				<a href= "https://drive.google.com/file/d/0BxAyexMig-KMOElVanZ5MzM3Q2NnSEs3UVo5LW9hMC0xdlVV/view?usp=sharing"> 
+				</center>
 			</div>
 		</div>
 	</body>
 </html>
-
-<h2>WELCOME</h2>
-<p> TODAY’S TOPIC!!!!!!!! 
-								People believe that the cause of the Bermuda Triangle disappearances is because of Atlantis is laying down in the the surrounding area, and the technology they have interferes with our technology and cause planes to crash down. After the plane crashes then they people go into the water, atlanteans help them and they live there. 
-							</p>
