--- a/lost.html
+++ b/lost.html
@@ -15,16 +15,40 @@
 					</li>
 				</ul>
 			</div>
-			<div class= "box header"> 
-				<center>WELCOME</center>
+			<div class= "box a"> 
+				<a href="bermuda.html"> Causes of disappearances in Bermuda Triangle?! </a>
 			</div>
-			<div class= "box b"> kdjgifgufg
+			<div class= "box b"> 
+				<a href="lost.html"> Lost at sea?!</a>
 			</div>
-			<div class= "box c"> frfhiergh
+			<div class= "box c"> 
+				<a href="theories.html"> Conspiracy theories </a>
 			</div>
-			<div class= "box d"> fkdbnfgbgg
+			<div class= "box d">
+				<a href="extra.html">Extra Caylene Traldonado </a>
 			</div>
-			<div class= "box main"> fkdbnfgbgg
+			<div class= "box main">	
+				<center>
+					<h2> Welcome </h2>
+					<a href="https://www.bermuda-attractions.com/bermuda2_000051.htm"><img src="images/lost.jpg" width= 500px height=300px/></a>
+					<h4> Click here to see the list of dissapearnaces in the Bermuda Triangle</h4> 
+					<h3>__________________________________________</h3>
+					<h2> Todays Topic! </h2> 
+					<p> People believe that the cause of the Bermuda Triangle disappearances is because of Atlantis is laying down in the the surrounding area, and the technology they have interferes with our technology and cause planes to crash down. After the plane crashes then they people go into the water, atlanteans help them and they live there. </p>
+					<a href="https://cdn.images.express.co.uk/img/dynamic/151/590x/Bermuda-Triangle-873690.jpg"><img src="images/lost2.jpg" width= 500px height=300px/> </a>
+					<h2> Theodosia-Burr-Alston </h2> 
+					<p> In hopes of recovering from her loss, Theodosia decided to sail to New York to visit her father. On the last day of 1812 she boarded the schooner Patriot in South Carolina. The ship left dock and sailed north.It was never seen again.Although all of the crew and the passengers disappeared, the vanishing of Theodosia is the one that people still talk about today. Numerous theories have been put forward as to what happened to the 29-year-old member of high society. </p>
+					<img src="images/theo.jpg" width= 500px height=300px/> </a>
+					<h2> Christopher Columbus </h2> 
+					<p> There has been many stories that Columbus and his crew saw a bright object rise up out of the ocean and fly into the sky, usually with only just key words quoted from the passage to emphasize the weirdness of the light but also to disguise the direction the light was seen to travel. Columbus had an issue with his compass during the voyage, a problem that has come to be used in two intriguing ways to support theories of both the Bermuda Triangle and of UFOs; but first, let's look at the original report. </p>
+					<img src="images/columbus.jpg" width= 500px height=300px/> </a>
+					<h2> Ellen Austin </h2> 
+					<p> The captain of the Ellen Austin sent some of his prize crew on board this ship. When the crew boarded the ship, they in fact confirmed that there was not a single soul on board. The captain of Ellen Austin ordered the crew to guide the ship so that they could all sail together to New York. After two days, the two ships got separated by a huge sea storm. And when the storm subsided, the unnamed ship was gone and never seen again. Yes, the mystery of the ship is still being explored. The crew and the unknown ship could never be traced again. However, in 1944, a retired British navy officer, Commander Gould wrote about this incident. In his article, he mentioned that the ship was actually found again by the Ellen Austin, but again like last time, there was no one on board. And the ship was sailing erratically. The crew were also gone. </p>
+					<a href="https://www.bermuda-attractions.com/bermuda2_00006f.htm"> <img src="images/ellen.jpg" width= 500px height=300px/> </a>
+					<h2> SS El Faro </h2> 
+					<p> SS El Faro was a 790-ft large cargo ship. On its ill fated voyage, it started sail from Jacksonville (Florida) bound for Puerto Rico towards east. So the route was right on the middle of Bermuda Triangle. On the day of its departure, a tropical storm called Joaquin was reported. But it was hundreds of miles away on the east. Such storm is common around this time of the year and can easily be negotiated by ships of this class. The route charted out for the ship would anyway clear past the path of the storm by about 100 miles, so  it was not considered any kind of threat by the captain. But the mother nature seems to have had other ideas. This is one of the most recent and tragic incidents of Bermuda Triangle, and the worst in 33 years. </p>
+					<a href="https://www.bermuda-attractions.com/bermuda2_00006f.htm"> <img src="images/boat.jpg" width= 500px height=300px/> </a>
+				</center>
 			</div>
 		</div>
 	</body>
