--- a/index.html
+++ b/index.html
@@ -16,36 +16,28 @@
 				</ul>
 			</div>
 			<div class= "box a"> 
-				<center>
-					Causes of disappearances in Bermuda Triangle?!
-				</center>
+				<a href="bermuda.html"> Causes of disappearances in Bermuda Triangle?! </a>
 			</div>
 			<div class= "box b"> 
-				<center>
-					Lost at sea?!
-				</center>
+				<a href="lost.html"> Lost at sea?!</a>
 			</div>
 			<div class= "box c"> 
-				<center>
-					Conspiracy theories 
-				</center>
+				<a href="theories.html"> Conspiracy theories </a>
 			</div>
 			<div class= "box d">
-				<Center>
-					Conspiracy theories 
-				</center>
+				<a href="extra.html">Extra Caylene Traldonado </a>
 			</div>
 			<div class= "box main">	
-			<center>
-				<h2> Welcome </h2>
+				<center>
+					<h2> Welcome </h2>
+					<a href="https://drive.google.com/file/d/0BxAyexMig-KMTHJDUC1HU25jNXZQdzFYcDhNZE51aU9UWk53/view?usp=sharing">
+					<img src="images/intro.jpg" width= 500px height=300px/></a>
+					<h4> Click here to watch the Caylene Traldonado</h4> 
+					<h3>__________________________________________</h3>
+					<h2> Todays Topic! </h2> 
+					<p> People believe that the cause of the Bermuda Triangle disappearances is because of Atlantis is laying down in the the surrounding area, and the technology they have interferes with our technology and cause planes to crash down. After the plane crashes then they people go into the water, atlanteans help them and they live there. </p>
+					<a href="https://cdn.images.express.co.uk/img/dynamic/151/590x/Bermuda-Triangle-873690.jpg"><img src="images/bermuda.jpg" width= 500px height=300px/> </a>
 				</center>
-					<center>
-						<a href="https://drive.google.com/file/d/0BxAyexMig-KMTHJDUC1HU25jNXZQdzFYcDhNZE51aU9UWk53/view?usp=sharing"><img src="images/intro.jpg" width= 500px height=300px/> </a>
-							<h4> TODAY’S TOPIC!!!!!!!! </h4> 
-								<h5> People believe that the cause of the Bermuda Triangle disappearances is because of Atlantis is laying down in the the surrounding area, and the technology they have interferes with our technology and cause planes to crash down. After the plane crashes then they people go into the water, atlanteans help them and they live there. </h5>
-						<a href="https://cdn.images.express.co.uk/img/dynamic/151/590x/Bermuda-Triangle-873690.jpg"><img src="images/bermuda.jpg" width= 500px height=300px/> </a>
-
-					</center>
 			</div>
 		</div>
 	</body>
