--- a/extra.html
+++ b/extra.html
@@ -30,7 +30,7 @@
 			<div class= "box main">	
 				<center>
 					<h2> Welcome </h2>
-					<a href="https://drive.google.com/file/d/0BxAyexMig-KMOElVanZ5MzM3Q2NnSEs3UVo5LW9hMC0xdlVV/view"><img src="images/interview.jpg" width= 500px height=300px/></a>
+					<a href="https://drive.google.com/file/d/0BxAyexMig-KMOElVanZ5MzM3Q2NnSEs3UVo5LW9hMC0xdlVV/view?usp=sharing"><img src="images/interview.jpg" width= 500px height=300px/></a>
 					<h4> Click here to watch the Caylene Traldonado</h4> 
 					<h3>__________________________________________</h3>
 					<h2> Extra Content Of Caylene Traldonado! </h2> 
