--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
 			<div class= "box main">	
 				<center>
 					<h2> Welcome </h2>
-					<a href="https://drive.google.com/file/d/0BxAyexMig-KMTHJDUC1HU25jNXZQdzFYcDhNZE51aU9UWk53/view?usp=sharing">
-					<img src="images/intro.jpg" width= 500px height=300px/></a>
+					<a href="https://drive.google.com/file/d/0BxAyexMig-KMTHJDUC1HU25jNXZQdzFYcDhNZE51aU9UWk53/view?usp=sharing"><img src="images/intro.jpg" width= 500px height=300px/></a>
 					<h4> Click here to watch the Caylene Traldonado</h4> 
 					<h3>__________________________________________</h3>
 					<h2> Todays Topic! </h2> 
 					<p> People believe that the cause of the Bermuda Triangle disappearances is because of Atlantis is laying down in the the surrounding area, and the technology they have interferes with our technology and cause planes to crash down. After the plane crashes then they people go into the water, atlanteans help them and they live there. </p>
-					<a href="https://cdn.images.express.co.uk/img/dynamic/151/590x/Bermuda-Triangle-873690.jpg"><img src="images/bermuda.jpg" width= 500px height=300px/> </a>
+					<a href="https://cdn.images.express.co.uk/img/dynamic/151/590x/Bermuda-Triangle-873690.jpg"><img src="images/Bermuda.jpg" width= 500px height=300px/> </a>
 				</center>
 			</div>
 		</div>
