--- a/bermuda.html
+++ b/bermuda.html
@@ -29,14 +29,16 @@
 			</div>
 			<div class= "box main">	
 				<center>
-					<h2> Welcome </h2>
+					<h2> Causes Of Disappearances in Bermuda Triangle!! </h2>
 					<a href="https://youtu.be/TqQlsbq649g"><img src="images/bermudatwo.jpg" width= 500px height=300px/></a>
 					<h4> Click here to watch a video about the Bermuda Triangle</h4> 
 					<h3>__________________________________________</h3>
 					<h2> About the Bermuda Triangle! </h2> 
 					<p> People believe that the cause of the Bermuda Triangle disappearances is because of Atlantis is laying down in the the surrounding area, and the technology they have interferes with our technology and cause planes to crash down. After the plane crashes then they people go into the water, atlanteans help them and they live there. </p>
 					<img src="images/atlantis1.png" width= 500px height=300px/> </a>
-					<p> People believe that the cause of the Bermuda Triangle disappearances is because of Atlantis is laying down in the the surrounding area, and the technology they have interferes with our technology and cause planes to crash down. After the plane crashes then they people go into the water, atlanteans help them and they live there.  </p> 
+					<h2> What I believe! </h2>
+					<P> I believe that after they fall into the water theen the people start living in atlantis with everyone. I also believe that because the government doesn’t want to tell the world about atlantis being a real thing that they make the people who have disappeared stay in down there because they don't feel like telling the world the truth. It's the best thing to do because it could save lots of lives>  </p> 
+					<img src="images/atlantis3.jpg" width= 500px height=300px/>
 				</center>
 			</div>
 		</div>
