--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class= "box main">	
 				<center>
 					<h2> Welcome </h2>
-					<a href="https://drive.google.com/file/d/0BxAyexMig-KMTHJDUC1HU25jNXZQdzFYcDhNZE51aU9UWk53/view?usp=sharing"><img src="images/intro.jpg" width= 500px height=300px/></a>
+					<a href="https://drive.google.com/file/d/0BxAyexMig-KMTHJDUC1HU25jNXZQdzFYcDhNZE51aU9UWk53/view?usp=sharing"> <img src="images/intro.JPG" width= 500px height=300px/> </a>
 					<h4> Click here to watch the Caylene Traldonado</h4> 
 					<h3>__________________________________________</h3>
 					<h2> Todays Topic! </h2> 
