--- a/extra.html
+++ b/extra.html
@@ -36,7 +36,7 @@
 					<h2> Extra Content Of Caylene Traldonado! </h2> 
 					<a href="https://drive.google.com/file/d/1ZC6ZLq1IHQPphWs29-b5MnIbO_zZkFX9/view?usp=sharing"><img src="images/op.jpg" width= 500px height=300px/> </a>
 					<p> This video is the pitching trailer for our op-doc which is based on the infasinations of unsovled mysteries.  
-				<a href= "https://drive.google.com/file/d/0BxAyexMig-KMOElVanZ5MzM3Q2NnSEs3UVo5LW9hMC0xdlVV/view?usp=sharing"> 
+				<a href= "https://drive.google.com/file/d/0BxAyexMig-KMOElVanZ5MzM3Q2NnSEs3UVo5LW9hMC0xdlVV/view?usp=sharing"> <img src=" images/capture.jpg" width= 500px height=300px/></a>
 				</center>
 			</div>
 		</div>
